# pysims

./: .gitignore  CMakeLists.txt  FreeFermionConfig.cpp  FreeFermionConfig.h  FreeFermionSimulator.cpp  FreeFermionSimulator.h  QuantumCHPState.cpp  QuantumCHPState.h  Simulator.hpp  main.cpp  make_job.py  profile_run.py  pyproject.toml  test.json
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  data.json  test
configs/bell_sandpile/: sandpile_all.json
configs/blocksim/: base.json  base_df.json  base_var.json  debug.json  evolution.json  test.json  time.json
configs/cluster_clifford/: base.json  cluster.json  cluster_qa.json  cluster_rc.json  cluster_threshold.json
configs/free_fermion/: test.json
configs/graph/: base.json  connectivity_qa_100.json  connectivity_qa_200.json  connectivity_rc_100.json  connectivity_rc_200.json  spaceseries.json  spaceseries_test.json  test.json  timeseries.json
configs/graphsim/: base.json  debug.json  random_graph.json  rc.json  unitary.json
configs/mincut/: base.json  mincut.json  space.json  time.json  transition.json
configs/mutual_information/: qa.json  rc.json
configs/post_selection/: grover_projection10.json  grover_projection4.json  grover_projection8.json
configs/quantum_automaton/: base.json  collapse.json  debug.json  fixed_mutual_information_qa.json  mutual_information_qa.json  quantum_automaton.json  space.json  test.json  test_surface.json  time.json  transition.json
configs/random_clifford/: base.json  collapse.json  entropy_surface.json  fixed_mutual_information_rc.json  mutual_information_rc.json  random_clifford.json  small_fixed_mutual_information.json  space.json  test.json  test_rc.json  time.json  transition.json
configs/sandpile_clifford/: critical_modes.json  critical_modes_10.json  critical_modes_16.json  critical_modes_23.json  critical_modes_25.json  critical_modes_26.json  critical_modes_27.json  critical_modes_asymm.json  critical_modes_time.json  critical_modes_time_obc.json  critical_modes_time_pbc.json  debug.json  fixed_mutual_information_sandpile.json  sandpile.json  sandpile2.json  sandpile_all_obc1.json  sandpile_all_obc1_b.json  sandpile_all_obc2.json  sandpile_all_pbc.json  test.json
configs/soc_clifford/: base.json  cluster_qa.json  cluster_rc.json  graph_ops128 copy.json  graph_ops128.json  graph_ops256.json  space.json  test.json  time.json
configs/soc_random_clifford/: cluster_threshold.json  soc_random_clifford.json  test.json
job_controller/: blocksim.py  brickwork.py  bulk_measurement.py  checkerboard.py  clifford_clustering.py  clifford_code.py  combine_data.py  do_run.py  env_sim.py  evosim.py  free_energy.py  graph_clustering.py  graph_xorsat.py  hq_amplitudes.py  ising.py  job_controller.py  ldpc.py  network_clifford.py  phaseless.py  qrpm.py  quantum_automaton.py  random_circuit_sampling.py  random_clifford.py  random_hamiltonian.py  rpmca.py  slanted_checkerboard.py  vqse.py  vqse_circuit.py  wsdc.py  xorsat.py  xz_circuit.py
job_controller/fermion/: adaptive.py  chain.py  test.py
job_controller/magic/: bipartite_mi.py  bond_dimension.py  half_ising_test.py  ising_test.py  magic_dynamics.py  magic_test.py  mps.py  test_bipartite_mi.py  test_magic.py  volume.py
job_controller/neural/: neural.py  nonlocal.py
job_controller/qrpm/: qrpm.py  qrpm_all.py  qrpm_st.py  qrpm_test.py  test_size.py  testrun
job_controller/xorsat/: ldpc.py  rpmca.py  rxpm.py
pysims/: __init__.py  bindings.py  combine_data.py  do_run.py  job_controller.py
src/: Entropy.hpp  Graph.cpp  Graph.h  Models.h  PySimulators.cpp  Simulator.hpp  main.cpp  simpletest.cpp  test  test.cpp  utils.cpp
src/BlockSim/: BlockSimulator.cpp  BlockSimulator.h  CMakeLists.txt
src/CliffordState/: CMakeLists.txt  CliffordState.hpp  QuantumCHPState.cpp  QuantumCHPState.h  QuantumCHPState.hpp  QuantumGraphState.cpp  QuantumGraphState.h  ShorCodeState.cpp  ShorCodeState.h  Tableau.cpp  Tableau.h  Tableau.hpp
src/DebugSim/: CMakeLists.txt  DebugSimulator.hpp
src/Models/BrickworkCircuit/: BrickworkCircuitSimulator.cpp  BrickworkCircuitSimulator.h  CMakeLists.txt
src/Models/BulkMeasurement/: BulkMeasurementSimulator.cpp  BulkMeasurementSimulator.h  CMakeLists.txt
src/Models/EnvironmentSim/: CMakeLists.txt  EnvironmentSimulator.cpp  EnvironmentSimulator.h
src/Models/GraphSim/: CMakeLists.txt  GraphCliffordSimulator.cpp  GraphCliffordSimulator.h
src/Models/GroverSAT/: CMakeLists.txt  GroverSATSimulator.cpp  GroverSATSimulator.h
src/Models/Network/: CMakeLists.txt  NetworkCliffordSimulator.cpp  NetworkCliffordSimulator.h
src/Models/Phaseless/: CMakeLists.txt  PhaselessSimulator.cpp  PhaselessSimulator.h
src/Models/PostSelection/: CMakeLists.txt  GroverProjectionSimulator.cpp  GroverProjectionSimulator.h  PostSelectionCliffordSimulator.cpp  PostSelectionCliffordSimulator.h
src/Models/RandomCircuitSampling/: CMakeLists.txt  RandomCircuitSamplingSimulator.cpp  RandomCircuitSamplingSimulator.h
src/Models/RandomHamiltonian/: CMakeLists.txt  RandomHamiltonianSimulator.cpp  RandomHamiltonianSimulator.h
src/Models/SelfOrganized/: CMakeLists.txt  SandpileCliffordSimulator.cpp  SandpileCliffordSimulator.h  SelfOrganizedCliffordSimulator.cpp  SelfOrganizedCliffordSimulator.h
src/PostSelection/: CMakeLists.txt  GroverProjectionSimulator.cpp  GroverProjectionSimulator.h  PostSelectionCliffordSimulator.cpp  PostSelectionCliffordSimulator.h
src/QuantumCircuit/: CMakeLists.txt  CircuitUtils.cpp  CircuitUtils.h  DensityMatrix.cpp  Instructions.hpp  MatrixProductState.cpp  QuantumCircuit.cpp  QuantumCircuit.h  QuantumState.h  Statevector.cpp  UnitaryState.cpp
src/RandomClifford/: CMakeLists.txt  ClusterRandomCliffordSimulator.cpp  ClusterRandomCliffordSimulator.h  DrivenRandomCliffordSimulator.hpp  RandomCliffordConfig.cpp  RandomCliffordConfig.h  RandomCliffordSimulator.cpp  RandomCliffordSimulator.h  SelfOrganizedRandomCliffordSimulator.cpp  SelfOrganizedRandomCliffordSimulator.h  UndrivenRandomCliffordSimulator.hpp
tmp/: FreeFermionConfig.cpp  QuantumAutomatonConfig.cpp  RandomCliffordConfig.h
(+75 files in other folders)
